--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="pegarTexto.js"></script>
         <meta charset="UTF-8">
-        <title>teste para fazer um formulario</title>
+        <title>pagina de cadastro</title>
     </head>
     <body>
         <section class="form-container">
